--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
-            android:name="com.example.alumniconnectionapp.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
-            android:name="com.example.alumniconnectionapp.HomePage"
+            android:name=".HomePage"
             android:label="@string/title_activity_home_page"
             android:parentActivityName="android.app.TabActivity" >
             <meta-data
@@ -34,6 +36,7 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
         </activity>
+        
     </application>
 
 </manifest>
