--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".UsersActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".HomeActivity" />
+        <activity android:name=".AccountInfo" />
         
     </application>
 
