--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".AccountInfo" />
+        <activity android:name=".UserDetail" />
         
     </application>
 
